--- a/SetGame/Base.lproj/Main.storyboard
+++ b/SetGame/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RoC-sn-hJW">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,6 +10,39 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--View Controller-->
+        <scene sceneID="s8v-cj-a8c">
+            <objects>
+                <viewController id="RoC-sn-hJW" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Orz-i4-LTc">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J5Z-fr-W2o" customClass="PlayingCardView" customModule="SetGame" customModuleProvider="target">
+                                <rect key="frame" x="16" y="123.33333333333334" width="382" height="509.33333333333326"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="J5Z-fr-W2o" secondAttribute="height" multiplier="6:8" id="F5B-LB-RF1"/>
+                                    <constraint firstAttribute="width" priority="750" constant="500" id="pd1-Fc-lBq"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.83234566450000003" blue="0.47320586440000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="D3P-zi-IBs" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="J5Z-fr-W2o" secondAttribute="trailing" constant="16" id="0vR-Hh-QBF"/>
+                            <constraint firstItem="J5Z-fr-W2o" firstAttribute="top" relation="greaterThanOrEqual" secondItem="D3P-zi-IBs" secondAttribute="top" constant="16" id="38j-dj-k5J"/>
+                            <constraint firstItem="J5Z-fr-W2o" firstAttribute="centerY" secondItem="D3P-zi-IBs" secondAttribute="centerY" id="JYI-bu-7Ko"/>
+                            <constraint firstItem="J5Z-fr-W2o" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="D3P-zi-IBs" secondAttribute="leading" constant="16" id="V96-Vf-IFq"/>
+                            <constraint firstItem="D3P-zi-IBs" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="J5Z-fr-W2o" secondAttribute="bottom" constant="16" id="Vf4-Qa-Rqu"/>
+                            <constraint firstItem="J5Z-fr-W2o" firstAttribute="centerX" secondItem="D3P-zi-IBs" secondAttribute="centerX" id="g8o-L8-ZEg"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="D3P-zi-IBs"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jcK-cM-OJe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-643.47826086956525" y="141.84782608695653"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
