--- a/SetGame/Base.lproj/Main.storyboard
+++ b/SetGame/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hnf-tP-sSh">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -463,15 +463,15 @@
                                 <rect key="frame" x="16" y="36" width="343" height="615"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" translatesAutoresizingMaskIntoConstraints="NO" id="40J-Me-888">
-                                        <rect key="frame" x="0.0" y="0.0" width="343" height="70"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="50"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UVp-Y6-lw6">
-                                                <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="62.5" height="50"/>
                                                 <color key="backgroundColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" secondItem="UVp-Y6-lw6" secondAttribute="height" multiplier="1:1" priority="750" id="Pue-cy-50v"/>
+                                                    <constraint firstAttribute="width" secondItem="UVp-Y6-lw6" secondAttribute="height" multiplier="5:4" priority="750" id="Pue-cy-50v"/>
                                                 </constraints>
-                                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="15"/>
+                                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="12"/>
                                                 <state key="normal" title="Restart">
                                                     <color key="titleColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
@@ -480,7 +480,7 @@
                                                 </connections>
                                             </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rRw-EG-xfc">
-                                                <rect key="frame" x="93" y="0.0" width="140" height="70"/>
+                                                <rect key="frame" x="115.5" y="0.0" width="100" height="50"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="rRw-EG-xfc" secondAttribute="height" multiplier="2:1" priority="750" id="ZDc-77-Hzn"/>
                                                 </constraints>
@@ -489,12 +489,12 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LGD-Uj-ccW">
-                                                <rect key="frame" x="238" y="0.0" width="105" height="70"/>
+                                                <rect key="frame" x="257.5" y="0.0" width="85.5" height="50"/>
                                                 <color key="backgroundColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" secondItem="LGD-Uj-ccW" secondAttribute="height" multiplier="3:2" priority="750" id="KN9-fN-M1s"/>
+                                                    <constraint firstAttribute="width" secondItem="LGD-Uj-ccW" secondAttribute="height" multiplier="12:7" priority="750" id="KN9-fN-M1s"/>
                                                 </constraints>
-                                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="15"/>
+                                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="12"/>
                                                 <state key="normal" title="Deal Cards">
                                                     <color key="titleColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
@@ -505,7 +505,7 @@
                                         </subviews>
                                         <constraints>
                                             <constraint firstAttribute="width" priority="800" constant="90" id="CYq-t0-ib1"/>
-                                            <constraint firstAttribute="height" priority="800" constant="70" id="Evb-zR-YHF"/>
+                                            <constraint firstAttribute="height" priority="800" constant="50" id="Evb-zR-YHF"/>
                                         </constraints>
                                         <variation key="default">
                                             <mask key="constraints">
@@ -525,7 +525,7 @@
                                         </variation>
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rA1-B9-xva">
-                                        <rect key="frame" x="0.0" y="86" width="343" height="529"/>
+                                        <rect key="frame" x="0.0" y="66" width="343" height="549"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <gestureRecognizers/>
                                         <connections>
@@ -547,9 +547,9 @@
                     </view>
                     <connections>
                         <outlet property="dealCardsButton" destination="LGD-Uj-ccW" id="Dzm-8O-A2n"/>
-                        <outlet property="playingView" destination="rA1-B9-xva" id="XzE-CY-q0j"/>
+                        <outlet property="newGameButton" destination="UVp-Y6-lw6" id="Yb3-Wl-uzA"/>
+                        <outlet property="playingBoardView" destination="rA1-B9-xva" id="DFE-ja-6tO"/>
                         <outlet property="scoreLabel" destination="rRw-EG-xfc" id="PS6-Fu-tz9"/>
-                        <outlet property="stackView" destination="5ij-JK-bik" id="W9o-aO-Otd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f4l-r1-bzH" userLabel="First Responder" sceneMemberID="firstResponder"/>
