--- a/SetGame/Base.lproj/Main.storyboard
+++ b/SetGame/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hnf-tP-sSh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="LeF-HA-Qhp">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -200,5 +200,182 @@
             </objects>
             <point key="canvasLocation" x="-1454" y="139"/>
         </scene>
+        <!--Graphical Set View Controller-->
+        <scene sceneID="N2d-dj-Sie">
+            <objects>
+                <viewController id="LeF-HA-Qhp" customClass="GraphicalSetViewController" customModule="SetGame" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bUY-5s-ow8">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="rgb-0m-UMF">
+                                <rect key="frame" x="16" y="36" width="288" height="516"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="i1h-yb-XCl">
+                                        <rect key="frame" x="0.0" y="0.0" width="288" height="50"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleAspectFit" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="rFj-yQ-AQB">
+                                                <rect key="frame" x="0.0" y="0.0" width="288" height="50"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tlS-CL-TZw">
+                                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" secondItem="tlS-CL-TZw" secondAttribute="height" multiplier="12:7" id="GIj-42-92J"/>
+                                                            <constraint firstAttribute="width" secondItem="tlS-CL-TZw" secondAttribute="height" multiplier="1:1" id="RiE-oQ-gu9"/>
+                                                        </constraints>
+                                                        <state key="normal" image="pauseDark"/>
+                                                        <variation key="default">
+                                                            <mask key="constraints">
+                                                                <exclude reference="GIj-42-92J"/>
+                                                            </mask>
+                                                        </variation>
+                                                        <variation key="heightClass=compact">
+                                                            <mask key="constraints">
+                                                                <include reference="GIj-42-92J"/>
+                                                                <exclude reference="RiE-oQ-gu9"/>
+                                                            </mask>
+                                                        </variation>
+                                                        <connections>
+                                                            <action selector="newGamePressed:" destination="LeF-HA-Qhp" eventType="touchUpInside" id="iyi-2a-35U"/>
+                                                        </connections>
+                                                    </button>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8ph-6O-Mv3" userLabel="ScoreContainer">
+                                                        <rect key="frame" x="76" y="0.0" width="100" height="50"/>
+                                                        <subviews>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2690" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J0e-Xa-vgq">
+                                                                <rect key="frame" x="0.0" y="0.0" width="100" height="50"/>
+                                                                <fontDescription key="fontDescription" name="BPreplay-Bold" family="BPreplay" pointSize="30"/>
+                                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                        </subviews>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="16k-Dn-cwk"/>
+                                                            <constraint firstItem="J0e-Xa-vgq" firstAttribute="top" secondItem="8ph-6O-Mv3" secondAttribute="top" id="9mB-zG-nau"/>
+                                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="90" id="RdP-Yz-gSj"/>
+                                                            <constraint firstItem="J0e-Xa-vgq" firstAttribute="leading" secondItem="8ph-6O-Mv3" secondAttribute="leading" id="Ybu-U8-whT"/>
+                                                            <constraint firstAttribute="trailing" secondItem="J0e-Xa-vgq" secondAttribute="trailing" id="cR7-Ln-StT"/>
+                                                            <constraint firstAttribute="bottom" secondItem="J0e-Xa-vgq" secondAttribute="bottom" id="nmd-kQ-Jj2"/>
+                                                            <constraint firstAttribute="width" secondItem="8ph-6O-Mv3" secondAttribute="height" multiplier="2:1" priority="750" id="qle-Su-irl"/>
+                                                        </constraints>
+                                                        <variation key="default">
+                                                            <mask key="constraints">
+                                                                <exclude reference="16k-Dn-cwk"/>
+                                                                <exclude reference="RdP-Yz-gSj"/>
+                                                            </mask>
+                                                        </variation>
+                                                        <variation key="heightClass=compact-widthClass=regular">
+                                                            <mask key="constraints">
+                                                                <include reference="RdP-Yz-gSj"/>
+                                                            </mask>
+                                                        </variation>
+                                                        <variation key="heightClass=regular-widthClass=compact">
+                                                            <mask key="constraints">
+                                                                <include reference="16k-Dn-cwk"/>
+                                                            </mask>
+                                                        </variation>
+                                                    </view>
+                                                    <button opaque="NO" contentMode="center" horizontalCompressionResistancePriority="749" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bNB-he-X7l">
+                                                        <rect key="frame" x="202.5" y="0.0" width="85.5" height="50"/>
+                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" secondItem="bNB-he-X7l" secondAttribute="height" multiplier="12:7" priority="750" id="Ytt-T7-I2J"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" name="CheGuevaraBarry-Brown" family="CheGuevara Barry" pointSize="15"/>
+                                                        <inset key="contentEdgeInsets" minX="10" minY="13" maxX="10" maxY="10"/>
+                                                        <state key="normal" title="Deal Cards">
+                                                            <color key="titleColor" red="0.41248917579650879" green="0.40001240372657776" blue="0.39978191256523132" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        </state>
+                                                        <connections>
+                                                            <action selector="dealCardsPressed:" destination="LeF-HA-Qhp" eventType="touchUpInside" id="axx-zC-2AH"/>
+                                                        </connections>
+                                                    </button>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="700" id="ZmJ-S4-NhV"/>
+                                                </constraints>
+                                                <variation key="heightClass=compact" axis="vertical"/>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="rFj-yQ-AQB" firstAttribute="centerX" secondItem="i1h-yb-XCl" secondAttribute="centerX" id="DGD-VL-yZr"/>
+                                            <constraint firstAttribute="width" constant="90" id="E8y-8P-Gil"/>
+                                            <constraint firstItem="rFj-yQ-AQB" firstAttribute="width" secondItem="i1h-yb-XCl" secondAttribute="width" priority="750" id="Gpf-9u-qgS"/>
+                                            <constraint firstItem="rFj-yQ-AQB" firstAttribute="top" secondItem="i1h-yb-XCl" secondAttribute="top" id="fSG-Ax-eq6"/>
+                                            <constraint firstAttribute="bottom" secondItem="rFj-yQ-AQB" secondAttribute="bottom" id="q7F-1C-eYZ"/>
+                                            <constraint firstAttribute="height" constant="50" id="yDH-N4-16f"/>
+                                        </constraints>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="E8y-8P-Gil"/>
+                                                <exclude reference="yDH-N4-16f"/>
+                                            </mask>
+                                        </variation>
+                                        <variation key="heightClass=compact">
+                                            <mask key="constraints">
+                                                <include reference="E8y-8P-Gil"/>
+                                            </mask>
+                                        </variation>
+                                        <variation key="widthClass=compact">
+                                            <mask key="constraints">
+                                                <include reference="yDH-N4-16f"/>
+                                            </mask>
+                                        </variation>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QBz-GP-7zY">
+                                        <rect key="frame" x="0.0" y="66" width="288" height="450"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XaF-xk-YXw">
+                                                <rect key="frame" x="0.0" y="0.0" width="288" height="450"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <gestureRecognizers/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="800" id="VVL-gk-L1a"/>
+                                                </constraints>
+                                                <connections>
+                                                    <outletCollection property="gestureRecognizers" destination="6eP-aa-xwN" appends="YES" id="X8d-0z-qdC"/>
+                                                </connections>
+                                            </view>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="XaF-xk-YXw" firstAttribute="centerX" secondItem="QBz-GP-7zY" secondAttribute="centerX" id="CZY-at-i4w"/>
+                                            <constraint firstItem="XaF-xk-YXw" firstAttribute="width" secondItem="QBz-GP-7zY" secondAttribute="width" priority="750" id="Tb5-Rz-XTh"/>
+                                            <constraint firstAttribute="bottom" secondItem="XaF-xk-YXw" secondAttribute="bottom" id="WhH-2W-dE5"/>
+                                            <constraint firstItem="XaF-xk-YXw" firstAttribute="top" secondItem="QBz-GP-7zY" secondAttribute="top" id="roo-tJ-woY"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <variation key="heightClass=compact" axis="horizontal"/>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.92773953379999996" blue="0.70218857020000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="8bI-sG-XzK" firstAttribute="trailing" secondItem="rgb-0m-UMF" secondAttribute="trailing" constant="16" id="8F0-ew-AOF"/>
+                            <constraint firstItem="rgb-0m-UMF" firstAttribute="leading" secondItem="8bI-sG-XzK" secondAttribute="leading" constant="16" id="HfK-Se-hch"/>
+                            <constraint firstItem="rgb-0m-UMF" firstAttribute="top" secondItem="8bI-sG-XzK" secondAttribute="top" constant="16" id="hfT-RT-K4u"/>
+                            <constraint firstItem="8bI-sG-XzK" firstAttribute="bottom" secondItem="rgb-0m-UMF" secondAttribute="bottom" constant="16" id="kms-Fg-gPl"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="8bI-sG-XzK"/>
+                    </view>
+                    <connections>
+                        <outlet property="dealCardsButton" destination="bNB-he-X7l" id="ffB-jz-FlN"/>
+                        <outlet property="menuView" destination="i1h-yb-XCl" id="Kf6-Sb-whl"/>
+                        <outlet property="newGameButton" destination="tlS-CL-TZw" id="seK-hr-gup"/>
+                        <outlet property="playingBoardView" destination="XaF-xk-YXw" id="tDT-Bn-jeu"/>
+                        <outlet property="scoreLabel" destination="J0e-Xa-vgq" id="xrv-kc-U3M"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Irc-b7-OJ3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="6eP-aa-xwN"/>
+            </objects>
+            <point key="canvasLocation" x="-555" y="138"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="pauseDark" width="50" height="50"/>
+    </resources>
 </document>
